[package]
name = "primitive-game"
version = "0.1.0"
authors = ["djade <djadenkus@gmail.com>"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "builder"
path = "src/builder.rs"
required-features = ["binaries"]

[dependencies]
zip = { version = "0.4.2", optional = true }
wasm-gc-api = { version = "0.1.11", optional = true }

[features]
binaries = ["zip", "wasm-gc-api"]
