[package]
name = "server"
version = "0.1.0"
authors = [
    "Vytautas Strimaitis <vstrimaitis@gmail.com>",
    "Domantas Jadenkus <djadenkus@gmail.com>"
]

[dependencies]
ws = "0.7.6"
log = "0.4.2"
fern = "0.5.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
zip = "0.4.2"
structopt = "0.2.12"
wasmi = "0.4.1"
